Created sign_up.xml for new users

--- a/app/src/main/res/layout/sign_in_main.xml
+++ b/app/src/main/res/layout/sign_in_main.xml
@@ -71,7 +71,7 @@ android:background="@color/primary_background">
     android:id="@+id/tvSignUpMessage"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/meed_an_account"
+    android:text="@string/need_an_account"
     android:textColor="@color/primaryTextColor"
     android:layout_below="@+id/btnSignIn"
     android:layout_centerHorizontal="true"
