--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="primaryDarkColor">#c8b900</color>
     <color name="primaryTextColor">#000000</color>
     <color name="primary_background">#DBDCD1</color>
+    <color name="textSecondary">#795548</color>
 </resources>
